# proteogenomics

./: Cargo.toml  README.md
sample-file/: evaltarget-filter.txt  evalue-filter-with-all-targets.txt  evalues-filter-with-target-annotated.txt  filtered-score.txt  filtered-scores-with-all-targets.txt  samplehmmalignment.txt
src/: args.rs  count.rs  euclidean.rs  evaltarget.rs  evalue.rs  main.rs  proteome.rs  score.rs  target.rs
